# manifold

./: CMakeLists.txt  manifold.js
assets/: manifold-97e4b3bd.wasm  manifold-d5b7a5dd.wasm  manifold.js  manifold.js.map  manifoldCAD.js  worker-9dfa7bd4.js  worker-wrapper-1556ef27.js  worker-wrapper-1556ef27.js.map  worker-wrapper-93ea675f.js  worker-wrapper-93ea675f.js.map
docs/html/: annotated.html  annotated_dup.js  boolean3_8h_source.html  classes.html  classmanifold_1_1_half_edge_mesh.html  classmanifold_1_1_manifold-members.html  classmanifold_1_1_manifold.html  classmanifold_1_1_manifold.js  classmanifold_1_1_mesh_builder.html  classmanifold_1_1_quality.html  collider_8h_source.html  common_8h_source.html  conv_8h_source.html  cross__section_8h_source.html  csg__tree_8h_source.html  dir_035854e2c8d5363d0a7c6528cb1706b0.html  dir_22436d21afed9fe2212ff99306573f86.html  dir_2c51409c809e8ad66fa65b4037751a14.html  dir_2f3bb0cab4b2b47ef2f8a491566c2c5e.html  dir_3129add96c7ae9ff67479c7829851787.html  dir_3a92f14bdf3dfaa79faab39cf7167cf2.html  dir_46e7b3646ff8bc1527ae1e0fd4b7ea0c.html  dir_4ffc793862454300142bae38e0ddddb6.html  dir_595091899e7484108f36f28facccf73b.html  dir_595ba06e7d6ef83c3b4b5ed8a5b33554.html  dir_6505c5f6e79ee6ee4e199558e7ba5a4c.html  dir_791e0ab30be21dbfeefdd31c55c59561.html  dir_79ec84d1c32dad719c443df036c21431.html  dir_7b5d38f1875f1b693f62ca6a108a1129.html  dir_831f472cf672c235312e7f1d1816ce6c.html  dir_ad6676c85f8243771b2b955151a944c1.html  dir_cabb6060e29ffd5a04545f711b9f938a.html  dir_e04d1e92cddc811868891c497dd4570a.html  dir_e399f696b862bd158a5664316cc046f2.html  dir_e600baf0cd831db43dc31cc567702ce1.html  functions_func.html  functions_g.html  functions_h.html  functions_p.html  functions_r.html  (+44 more)
extras/: CMakeLists.txt
include/: CMakeLists.txt
include/manifold/: manifold.h
jsdocs/assets/: search.js
jsdocs/classes/: manifold_encapsulated_types.CrossSection.html  (+2 more)
meshIO/: CMakeLists.txt
src/: CMakeLists.txt
src/manifold/: CMakeLists.txt
test/: CMakeLists.txt
(+53 files in other folders)
